Fix horizontal scroll in scroll in edit data placement resources table

--- a/frontend/src/app/components/modals/edit-bucket-placement-modal/edit-bucket-placement-modal.less
+++ b/frontend/src/app/components/modals/edit-bucket-placement-modal/edit-bucket-placement-modal.less
@@ -9,7 +9,7 @@
 
     .resource-table {
         .selected-col {
-            min-width: 24px;
+            min-width: 25px;
         }
 
         .state-col {
@@ -21,19 +21,17 @@
         }
 
         .name-col {
-            .no-wrap();
-
             text-align: left;
             width: 100%;
-            max-width: 92px;
+            max-width: 156px;
         }
 
         .healthy-hosts-col {
-            min-width: 118px;
+            min-width: 90px;
         }
 
         .healthy-nodes-col {
-            min-width: 132px;
+            min-width: 90px;
         }
 
         .usage-col {
